--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <h2>化工製造所註冊與付費登記系統</h2>
   </div>
 
-  <label>真實姓名：<input type="text" id="realName" required></label>
+  <label>您的真實姓名：<input type="text" id="realName" required></label>
   <label>個人Facebook網址(聯絡用)：<input type="text" id="fbName" required></label>
 
   <label>選擇付款方式：
