--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 
       const payload = {
         realName, fbName, paymentMethod,
-        bankLast5: accountInput,
+        paymentInfo: accountInput,
         username, password, selectedSchools, totalPrice
       };
 
