--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
 
       const data = await res.json();
       if (data.success) {
-        alert("✅ 送出成功，請耐心等待審核！");
+        alert("✅ 送出成功，非常感謝您的支持！請主動私訊粉專告知並耐心等待審核！");
         clearForm();
       } else {
         alert("❌ 發生錯誤：" + (data.error || "請稍後再試"));
