--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!-- 修改後 admin 註冊頁面 -->
 <!DOCTYPE html>
 <html lang="zh-TW">
 <head>
@@ -19,6 +18,7 @@
       align-items: center;
       justify-content: center;
       gap: 10px;
+      margin-bottom: 20px;
     }
     .header img {
       height: 60px;
@@ -61,6 +61,20 @@
       font-size: 14px;
       margin-top: 10px;
     }
+
+    /* ✅ 手機版調整：標題垂直排列 */
+    @media (max-width: 600px) {
+      .header {
+        flex-direction: column;
+        text-align: center;
+      }
+      .header img {
+        margin-bottom: 10px;
+      }
+      h2 {
+        font-size: 20px;
+      }
+    }
   </style>
 </head>
 <body>
@@ -96,6 +110,7 @@
     <p>若有操作相關疑問，請聯絡 <a href="https://www.facebook.com/CHEisverygood/" target="_blank">Facebook 粉專</a> 或來信 <a href="mailto:cheerfactorysolution@gmail.com">cheerfactorysolution@gmail.com</a></p>
     <p>著作權所有，侵害必究 © 化工製造所</p>
   </footer>
+
 
   <script>
     const schoolPrices = {
