--- a/index.html
+++ b/index.html
@@ -3,25 +3,32 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>化工製造所｜研究所考古題平台</title>
+  <title>【化工製造所】 - 化工所考古題詳解｜化工研究所考古題平台</title>
   <link rel="stylesheet" href="style.css">
   <style>
-    .school-gallery {
+    .school-section {
+      margin-top: 40px;
+    }
+    .school-title {
+      font-size: 20px;
+      font-weight: bold;
+      margin-bottom: 10px;
+    }
+    .school-thumbnails {
       display: flex;
       flex-wrap: wrap;
-      gap: 15px;
+      gap: 12px;
       justify-content: center;
-      margin-top: 20px;
     }
-    .school-gallery button {
-      background-color: #eee;
-      border: 1px solid #ccc;
-      padding: 10px 16px;
-      border-radius: 6px;
+    .school-thumbnails img {
+      width: 150px;
+      height: auto;
+      border-radius: 8px;
       cursor: pointer;
+      transition: transform 0.2s;
     }
-    .school-gallery button:hover {
-      background-color: #ddd;
+    .school-thumbnails img:hover {
+      transform: scale(1.05);
     }
     .modal {
       display: none;
@@ -40,12 +47,12 @@
       background-color: #fff;
       padding: 20px;
       border-radius: 8px;
-      max-width: 90%;
-      max-height: 90%;
+      max-width: 95%;
+      max-height: 95%;
       text-align: center;
     }
     .modal-content img {
-      max-width: 100%;
+      max-width: 90vw;
       max-height: 70vh;
       border-radius: 8px;
     }
@@ -53,7 +60,7 @@
       position: absolute;
       top: 10px;
       right: 15px;
-      font-size: 20px;
+      font-size: 24px;
       cursor: pointer;
     }
     .modal-nav {
@@ -61,7 +68,23 @@
     }
     .modal-nav button {
       margin: 0 10px;
-      padding: 6px 12px;
+      padding: 8px 16px;
+      font-size: 16px;
+    }
+    .cta-buttons {
+      text-align: center;
+      margin-top: 40px;
+    }
+    .cta-buttons img {
+      width: 240px;
+      margin: 10px;
+      cursor: pointer;
+    }
+    footer {
+      margin-top: 60px;
+      text-align: center;
+      font-size: 14px;
+      color: #777;
     }
   </style>
 </head>
@@ -80,6 +103,7 @@
       <li>手機/平板/電腦皆可操作</li>
       <li>一次購買，陪你到考完！</li>
     </ul>
+    <p style="color: red; font-weight: bold;">※至收錄的最新年度之隔年考完6/30為止<br>例如最新版考古題收錄至114年，可觀看至115年6/30，特殊情況者請接洽粉專</p>
 
     <h2>💰 方案價格</h2>
     <ul>
@@ -90,7 +114,6 @@
       <li>台科大全部：NT$600（含104~113單操輸送 化熱化反 工數）</li>
       <li>中興全部：NT$600（含104~112單操輸送 化熱化反 工數）</li>
     </ul>
-
     <p><strong>※優惠：</strong><br>
       ● 兩間學校：折150元<br>
       ● 三間學校：折250元<br>
@@ -101,18 +124,11 @@
     </p>
 
     <h2>🖼️ 考古題畫面預覽</h2>
-    <div class="school-gallery">
-      <button onclick="openGallery('台大')">台大</button>
-      <button onclick="openGallery('清大')">清大</button>
-      <button onclick="openGallery('成大')">成大</button>
-      <button onclick="openGallery('台科大')">台科大</button>
-      <button onclick="openGallery('中央')">中央</button>
-      <button onclick="openGallery('中興')">中興</button>
-    </div>
+    <div id="previewSections"></div>
 
     <div class="cta-buttons">
-      <a href="https://woodyhu9512.github.io/cheisgood/">立即登入</a>
-      <a href="https://woodyhu9512.github.io/chesolutionsignup/signup.html">我要註冊與購買！</a>
+      <a href="https://woodyhu9512.github.io/cheisgood/" target="_blank"><img src="https://i.imgur.com/BTbg5oT.png" alt="立即登入"></a>
+      <a href="https://woodyhu9512.github.io/chesolutionsignup/signup.html" target="_blank"><img src="https://i.imgur.com/SNOISWW.png" alt="註冊與購買"></a>
     </div>
 
     <footer>
@@ -120,6 +136,10 @@
         <a href="terms.html">服務條款</a> |
         <a href="privacy.html">隱私權政策</a> |
         <a href="refund.html">退款政策</a>
+      </p>
+      <p>聯絡我們：<br>
+        Facebook：<a href="https://www.facebook.com/CHEisverygood/" target="_blank">https://www.facebook.com/CHEisverygood/</a><br>
+        Email：<a href="mailto:cheerfactorysolution@gmail.com">cheerfactorysolution@gmail.com</a>
       </p>
       <p>© 2025 化工製造所</p>
     </footer>
@@ -138,9 +158,7 @@
 
   <script>
     const galleries = {
-      "台大": [
-        "台大-1.png", "台大-2.png", "台大-3.png"
-      ],
+      "台大": ["台大-1.png", "台大-2.png", "台大-3.png"],
       "清大": ["清大-1.png", "清大-2.png"],
       "成大": ["成大-1.png", "成大-2.png", "成大-3.png"],
       "台科大": ["台科大-1.png", "台科大-2.png"],
@@ -148,12 +166,29 @@
       "中興": ["中興-1.png", "中興-2.png"]
     };
 
+    const previewContainer = document.getElementById("previewSections");
+    Object.keys(galleries).forEach(school => {
+      const section = document.createElement("div");
+      section.className = "school-section";
+      section.innerHTML = `<div class="school-title">${school}</div>`;
+      const thumbs = document.createElement("div");
+      thumbs.className = "school-thumbnails";
+      galleries[school].forEach((img, index) => {
+        const thumb = document.createElement("img");
+        thumb.src = `https://github.com/WOODYHU9512/chesolutionsignup/blob/main/${img}?raw=true`;
+        thumb.onclick = () => openGallery(school, index);
+        thumbs.appendChild(thumb);
+      });
+      section.appendChild(thumbs);
+      previewContainer.appendChild(section);
+    });
+
     let currentSchool = "";
     let currentIndex = 0;
 
-    function openGallery(school) {
+    function openGallery(school, index) {
       currentSchool = school;
-      currentIndex = 0;
+      currentIndex = index;
       updateModalImage();
       document.getElementById("imageModal").style.display = "flex";
     }
@@ -169,17 +204,13 @@
     }
 
     function prevImage() {
-      if (currentIndex > 0) {
-        currentIndex--;
-        updateModalImage();
-      }
+      currentIndex = (currentIndex - 1 + galleries[currentSchool].length) % galleries[currentSchool].length;
+      updateModalImage();
     }
 
     function nextImage() {
-      if (currentIndex < galleries[currentSchool].length - 1) {
-        currentIndex++;
-        updateModalImage();
-      }
+      currentIndex = (currentIndex + 1) % galleries[currentSchool].length;
+      updateModalImage();
     }
   </script>
 </body>
