--- a/index.html
+++ b/index.html
@@ -3,32 +3,29 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>【化工製造所】 - 化工所考古題詳解｜化工研究所考古題平台</title>
+  <title>化工製造所｜研究所考古題平台</title>
   <link rel="stylesheet" href="style.css">
   <style>
-    .school-section {
-      margin-top: 40px;
+    .school-preview-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+      gap: 20px;
+      margin-top: 20px;
+      text-align: center;
     }
-    .school-title {
-      font-size: 20px;
-      font-weight: bold;
-      margin-bottom: 10px;
-    }
-    .school-thumbnails {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 12px;
-      justify-content: center;
-    }
-    .school-thumbnails img {
-      width: 150px;
+    .school-preview-grid img {
+      width: 180px;
       height: auto;
-      border-radius: 8px;
+      border-radius: 10px;
       cursor: pointer;
-      transition: transform 0.2s;
+      transition: transform 0.3s;
     }
-    .school-thumbnails img:hover {
+    .school-preview-grid img:hover {
       transform: scale(1.05);
+    }
+    .school-label {
+      margin-top: 10px;
+      font-weight: bold;
     }
     .modal {
       display: none;
@@ -38,7 +35,7 @@
       top: 0;
       width: 100%;
       height: 100%;
-      background-color: rgba(0,0,0,0.7);
+      background-color: rgba(0,0,0,0.8);
       justify-content: center;
       align-items: center;
     }
@@ -53,7 +50,7 @@
     }
     .modal-content img {
       max-width: 90vw;
-      max-height: 70vh;
+      max-height: 75vh;
       border-radius: 8px;
     }
     .modal-close {
@@ -75,10 +72,14 @@
       text-align: center;
       margin-top: 40px;
     }
-    .cta-buttons img {
-      width: 240px;
+    .cta-buttons a img {
+      width: 260px;
       margin: 10px;
-      cursor: pointer;
+      border-radius: 12px;
+      transition: transform 0.2s;
+    }
+    .cta-buttons a img:hover {
+      transform: scale(1.05);
     }
     footer {
       margin-top: 60px;
@@ -124,11 +125,11 @@
     </p>
 
     <h2>🖼️ 考古題畫面預覽</h2>
-    <div id="previewSections"></div>
+    <div class="school-preview-grid" id="previewGrid"></div>
 
     <div class="cta-buttons">
-      <a href="https://woodyhu9512.github.io/cheisgood/" target="_blank"><img src="https://i.imgur.com/BTbg5oT.png" alt="立即登入"></a>
-      <a href="https://woodyhu9512.github.io/chesolutionsignup/signup.html" target="_blank"><img src="https://i.imgur.com/SNOISWW.png" alt="註冊與購買"></a>
+      <a href="https://woodyhu9512.github.io/cheisgood/" target="_blank"><img src="https://i.imgur.com/6UcoGVf.png" alt="立即登入"></a>
+      <a href="https://woodyhu9512.github.io/chesolutionsignup/signup.html" target="_blank"><img src="https://i.imgur.com/1PeLfCg.png" alt="我要註冊與購買"></a>
     </div>
 
     <footer>
@@ -166,21 +167,19 @@
       "中興": ["中興-1.png", "中興-2.png"]
     };
 
-    const previewContainer = document.getElementById("previewSections");
+    const previewGrid = document.getElementById("previewGrid");
     Object.keys(galleries).forEach(school => {
-      const section = document.createElement("div");
-      section.className = "school-section";
-      section.innerHTML = `<div class="school-title">${school}</div>`;
-      const thumbs = document.createElement("div");
-      thumbs.className = "school-thumbnails";
-      galleries[school].forEach((img, index) => {
-        const thumb = document.createElement("img");
-        thumb.src = `https://github.com/WOODYHU9512/chesolutionsignup/blob/main/${img}?raw=true`;
-        thumb.onclick = () => openGallery(school, index);
-        thumbs.appendChild(thumb);
-      });
-      section.appendChild(thumbs);
-      previewContainer.appendChild(section);
+      const wrapper = document.createElement("div");
+      const thumb = document.createElement("img");
+      thumb.src = `https://github.com/WOODYHU9512/chesolutionsignup/blob/main/${galleries[school][0]}?raw=true`;
+      thumb.alt = school;
+      thumb.onclick = () => openGallery(school, 0);
+      const label = document.createElement("div");
+      label.className = "school-label";
+      label.innerText = school;
+      wrapper.appendChild(thumb);
+      wrapper.appendChild(label);
+      previewGrid.appendChild(wrapper);
     });
 
     let currentSchool = "";
@@ -204,12 +203,14 @@
     }
 
     function prevImage() {
-      currentIndex = (currentIndex - 1 + galleries[currentSchool].length) % galleries[currentSchool].length;
+      const len = galleries[currentSchool].length;
+      currentIndex = (currentIndex - 1 + len) % len;
       updateModalImage();
     }
 
     function nextImage() {
-      currentIndex = (currentIndex + 1) % galleries[currentSchool].length;
+      const len = galleries[currentSchool].length;
+      currentIndex = (currentIndex + 1) % len;
       updateModalImage();
     }
   </script>
