--- a/index.html
+++ b/index.html
@@ -135,14 +135,38 @@
     <h2>🖼️ 考古題畫面預覽</h2>
     <div class="school-preview-grid" id="previewGrid"></div>
 
-    <div class="cta-buttons">
-      <a href="https://woodyhu9512.github.io/cheisgood/" target="_blank">
-        <img src="https://i.imgur.com/wImLHZn.png" alt="立即登入">
-      </a>
-      <a href="https://woodyhu9512.github.io/chesolutionsignup/signup.html" target="_blank">
-        <img src="https://i.imgur.com/MsKDnQO.png" alt="我要註冊與購買">
-      </a>
-    </div>
+    <style>
+  .cta-buttons {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+    margin-top: 40px;
+    flex-wrap: wrap;
+  }
+
+  .cta-button {
+    padding: 14px 28px;
+    background: linear-gradient(to right, #0077cc, #005fa3);
+    color: white;
+    font-size: 18px;
+    font-weight: bold;
+    text-decoration: none;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+    transition: transform 0.2s, box-shadow 0.2s;
+  }
+
+  .cta-button:hover {
+    transform: scale(1.05);
+    box-shadow: 0 6px 14px rgba(0,0,0,0.25);
+  }
+</style>
+
+<div class="cta-buttons">
+  <a href="https://woodyhu9512.github.io/cheisgood/" class="cta-button" target="_blank">立即登入</a>
+  <a href="https://woodyhu9512.github.io/chesolutionsignup/signup.html" class="cta-button" target="_blank">我要註冊與購買！</a>
+</div>
+
 
     <footer>
       <p>
