--- a/index.html
+++ b/index.html
@@ -77,17 +77,48 @@
       font-size: 16px;
     }
     .cta-buttons {
+      display: flex;
+      justify-content: center;
+      gap: 20px;
+      margin-top: 40px;
+      flex-wrap: wrap;
+    }
+    .cta-button {
+      padding: 14px 28px;
+      background: linear-gradient(to right, #0077cc, #005fa3);
+      color: white;
+      font-size: 18px;
+      font-weight: bold;
+      text-decoration: none;
+      border-radius: 10px;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+      transition: transform 0.2s, box-shadow 0.2s;
+    }
+    .cta-button:hover {
+      transform: scale(1.05);
+      box-shadow: 0 6px 14px rgba(0,0,0,0.25);
+    }
+    .flow-section {
       text-align: center;
       margin-top: 40px;
     }
-    .cta-buttons a img {
-      width: 260px;
-      margin: 10px;
-      border-radius: 12px;
-      transition: transform 0.2s;
+    .flow-section h2 {
+      margin-bottom: 20px;
     }
-    .cta-buttons a img:hover {
-      transform: scale(1.05);
+    .flow-icons {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 30px;
+    }
+    .flow-icons img {
+      width: 200px;
+      height: auto;
+    }
+    .flow-caption {
+      font-size: 14px;
+      color: #666;
+      margin-top: 8px;
     }
     footer {
       margin-top: 60px;
@@ -132,47 +163,37 @@
       <em>(需一次購買，不可累積折扣；若需購買六間請先私訊)</em>
     </p>
 
+    <div class="flow-section">
+      <h2>🛒 購買流程</h2>
+      <div class="flow-icons">
+        <div>
+          <img src="https://i.imgur.com/lAqDhJl.png" alt="註冊資料">
+          <div class="flow-caption">填寫註冊資料（包含帳號密碼）</div>
+        </div>
+        <div>
+          <img src="https://i.imgur.com/W51wOex.png" alt="付款">
+          <div class="flow-caption">確認付款<br><small>支援街口支付/銀行轉帳/超商代碼/超商條碼繳費</small></div>
+        </div>
+        <div>
+          <img src="https://i.imgur.com/JR1rCgJ.png" alt="開通">
+          <div class="flow-caption">人工開通後即可不限次數瀏覽</div>
+        </div>
+      </div>
+    </div>
+
     <h2>🖼️ 考古題畫面預覽</h2>
     <div class="school-preview-grid" id="previewGrid"></div>
 
-    <style>
-  .cta-buttons {
-    display: flex;
-    justify-content: center;
-    gap: 20px;
-    margin-top: 40px;
-    flex-wrap: wrap;
-  }
-
-  .cta-button {
-    padding: 14px 28px;
-    background: linear-gradient(to right, #0077cc, #005fa3);
-    color: white;
-    font-size: 18px;
-    font-weight: bold;
-    text-decoration: none;
-    border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0,0,0,0.2);
-    transition: transform 0.2s, box-shadow 0.2s;
-  }
-
-  .cta-button:hover {
-    transform: scale(1.05);
-    box-shadow: 0 6px 14px rgba(0,0,0,0.25);
-  }
-</style>
-
-<div class="cta-buttons">
-  <a href="https://woodyhu9512.github.io/cheisgood/" class="cta-button" target="_blank">立即登入</a>
-  <a href="https://woodyhu9512.github.io/chesolutionsignup/signup.html" class="cta-button" target="_blank">我要註冊與購買！</a>
-</div>
-
+    <div class="cta-buttons">
+      <a href="https://woodyhu9512.github.io/cheisgood/" class="cta-button" target="_blank">立即登入</a>
+      <a href="https://woodyhu9512.github.io/chesolutionsignup/signup.html" class="cta-button" target="_blank">我要註冊與購買！</a>
+    </div>
 
     <footer>
       <p>
-        <a href="terms.html">服務條款</a> |
-        <a href="privacy.html">隱私權政策</a> |
-        <a href="refund.html">退款政策</a>
+        <a href="term.html">服務條款</a> |
+        <a href="term.html#privacy">隱私權政策</a> |
+        <a href="term.html#refund">退款政策</a>
       </p>
       <p>聯絡我們：<br>
         Facebook：<a href="https://www.facebook.com/CHEisverygood/" target="_blank">https://www.facebook.com/CHEisverygood/</a><br>
